src/static/styles/index.css
/* Fix Row Margin */
.ant-row {
  margin-top: 0px !important;
  margin-bottom: 0px !important;
}

/* Input */
textarea {
  resize: none;
}
.ant-input:focus {
  border: none !important;
  box-shadow: none !important;
  -webkit-box-shadow: none !important;
}

/* Card */
.ant-card {
  box-shadow: 0px 20px 30px 2px rgba(199, 213, 239, 0.75);
}
.ant-card-hoverable:hover {
  transform: scale(1.025);
}
.ant-card-hoverable:focus-within {
  transform: scale(1.025);
}

/* Drawer */
.ant-drawer-content {
  background-color: #00000010 !important;
}

